# airtouch5py

./: README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
airtouch5py/: airtouch5_client.py  airtouch5_simple_client.py  airtouch5client.py  data_packet_factory.py  discovery.py  packet_decoder.py  packet_encoder.py  packet_fields.py  packet_reader.py  packetdecoder.py
airtouch5py/packets/: ac_ability.py  ac_control.py  ac_error_information.py  ac_status.py  console_version.py  datapacket.py  zone_control.py  zone_name.py  zone_status.py
src/airtouch5py/: datapacket.py  packetdecoder.py
tests/: test_packet_decode_encode.py  test_packet_decoder.py  test_packet_reader.py  test_packetdecoder.py
